Fix form input placeholders not showing in MS Edge
Caused by opacity being set < 1 on the ::placeholder pseudo element, and any of the placeholder parent elements (including the actual input itself, right up to body) have position: relative or absolute applied.

Use RGBA colour instead.

See: https://developer.microsoft.com/en-us/microsoft-edge/platform/issues/3901363/
Codepen: http://codepen.io/sambulance/pen/XNKQag

--- a/src/styles/components/_SearchBar.scss
+++ b/src/styles/components/_SearchBar.scss
@@ -37,10 +37,9 @@
 	padding-right: 0;
 	width: 100%;
 
-	::placeholder {
-		opacity: .75;
+	&::placeholder {
+		color: rgba( #FFF, .75 );
 	}
-
 }
 
 // TODO - remove in JS, replace with 'clear'?
